--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subfuzion/cloud-run-app",
-  "private" : true,
+  "private": true,
   "description": "Node.js app with TypeScript for Cloud Run",
   "version": "0.1.0",
   "license": "Apache-2.0",
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/express": "4.17.21",
     "@types/jest": "29.5.10",
+    "@types/supertest": "2.0.16",
     "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.13.1",
     "eslint": "8.54.0",
@@ -43,6 +44,7 @@
     "lint-staged": "15.1.0",
     "prettier": "3.1.0",
     "rimraf": "5.0.5",
+    "supertest": "6.3.3",
     "ts-jest": "29.1.1",
     "tsx": "4.6.0",
     "typescript": "5.3.2"
