--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test:serial": "npm test -- --runInBand",
     "test:watch": "npm test -- --watch",
     "test:watchAll": "npm test -- --watchAll",
-    "deploy": "gcloud run deploy [SERVICE] --allow-unauthenticated --source ."
+    "deploy": "gcloud run deploy [SERVICE] --project [PROJECT] --region [REGION] --platform managed --allow-unauthenticated --source ."
   },
   "devDependencies": {
     "@types/express": "4.17.21",
