--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "test:serial": "npm test -- --runInBand",
     "test:watch": "npm test -- --watch",
     "test:watchAll": "npm test -- --watchAll",
-    "deploy": "gcloud run deploy [SERVICE] --project=[PROJECT] --region=[REGION] --platform managed --allow-unauthenticated --source .",
-    "logs": " gcloud beta run services logs read [SERVICE] --project=[PROJECT] --region=[REGION] --limit=10",
-    "logs:tail": "gcloud beta run services logs tail [SERVICE] --region=[REGION] --project=[PROJECT]"
+    "deploy": "gcloud run deploy $SERVICE --project=$PROJECT --region=$REGION --platform managed --allow-unauthenticated --source .",
+    "logs": " gcloud beta run services logs read $SERVICE --project=$PROJECT --region=[REGION] --limit=10",
+    "logs:tail": "gcloud beta run services logs tail $SERVICE --project=$PROJECT --region=$REGION"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
