feat: test coverage

--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "check": "prettier --check .",
     "format": "prettier --write .",
     "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings=ExperimentalWarning\" jest --no-cache --silent",
+    "test:watch": "npm test -- --watch",
+    "test:watchAll": "npm test -- --watchAll",
     "test:unit": "npm test -- ./src/",
     "test:integration": "npm test -- ./test/",
     "test:smoke": "npm test -- ./test/smoke.test.ts",
-    "test:coverage": "npm run test --coverage",
+    "test:coverage": "npm test -- --coverage",
     "test:serial": "npm test -- --runInBand",
-    "test:watch": "npm test -- --watch",
-    "test:watchAll": "npm test -- --watchAll",
     "deploy": "gcloud run deploy $SERVICE --project=$PROJECT --region=$REGION --platform managed --allow-unauthenticated --source .",
     "logs": " gcloud beta run services logs read $SERVICE --project=$PROJECT --region=[REGION] --limit=10",
     "logs:tail": "gcloud beta run services logs tail $SERVICE --project=$PROJECT --region=$REGION"
